# rblx-extern

./: .gitignore  CMakeLists.txt  README.md  cradle-main.lnk  vcpkg.json
New folder/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cradle.slnx  cradle.vcxproj  cradle.vcxproj.filters
New folder/cradle.dir/Release/cradle.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  cradle.lastbuildstate
New folder/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
New folder/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
cmake/: randomize_exe_name.cmake
config/: hwid_whitelist.txt  mossad_config.cfg
lr/: lighting_reference.txt
reference/1/: antagonist-external.vcxproj
reference/1/include/sol/: sol.hpp
reference/1/lua_env/: LuaVM.hpp
reference/1/mapper/kernel_ctx/: kernel_ctx.h
reference/1/mapper/physmeme/: physmeme.hpp
reference/1/roblox/classes/: classes.cpp  classes.hpp
scripts/: upload_build.ps1
src/: imgui_impl_dx11.cpp  main.cpp
src/cache/: player.hpp  player_cache.cpp  player_cache.hpp
src/config/: config_manager.cpp  config_manager.hpp
src/evo/: inc.hpp
src/evo/evo-sdk/render/: render_system.cpp  render_system.hpp
src/evo/ui/container/: container.cpp  container.hpp
src/evo/ui/controls/child/: child.cpp  child.hpp
src/evo/ui/controls/esp_preview/: esp_preview.cpp
src/evo/ui/controls/keybind/: keybind.cpp
src/evo/ui/controls/popup/: popup.cpp  popup.hpp
src/evo/ui/controls/text/: text.cpp  text.hpp
src/evo/ui/controls/window/: window.cpp
src/modules/: friend_manager.cpp  friend_manager.hpp  module.hpp  module_manager.hpp
src/modules/aimbot/: aimbot_module.cpp  aimbot_module.hpp
src/modules/anti_aim/: anti_aim_module.cpp  anti_aim_module.hpp
src/modules/esp/: esp_module.cpp  esp_visuals_module.cpp  esp_visuals_module.hpp
src/modules/friends/: friends_module.cpp  friends_module.hpp
src/modules/profiling/: profiling_module.cpp  profiling_module.hpp
src/modules/silent_aim/: silent_aim_module.cpp  silent_aim_module.hpp
src/modules/triggerbot/: triggerbot_module.cpp
src/overlay/: overlay.cpp  overlay.hpp
src/shims/: FastLog.h
src/util/engine/: offsets.hpp
src/util/engine/datamodel/: datamodel.cpp  datamodel.hpp
src/util/engine/input/: mouse_service.cpp  mouse_service.hpp
src/util/engine/instance/: instance.cpp  instance.hpp
src/util/engine/lighting/: lighting.cpp  lighting.hpp
src/util/engine/wallcheck/: wallcheck.cpp  wallcheck.hpp
src/util/profiling/: profiler.cpp  profiler.hpp
src/util/security/: hwid.cpp  hwid.hpp
